@@ -51,6 +51,8 @@ bzr-0.0.5  NOT RELEASED YET
     * If the Python interpreter is too old, try to find a better one
       or give an error.  Based on a patch from Fredrik Lundh.
 
+    * New optional parameter ``bzr info [BRANCH]``.
+
   
   BUG FIXES:
 
